--- a/skeleton.tex
+++ b/skeleton.tex
@@ -53,7 +53,21 @@ Category theory has provided  a solid language in which to talk about mathematic
 
 \section{The definition of living systems}
 
-One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and parasitic organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is define, or more concretely, the boundary of our so called living system. A common argument against some definitions of life is the weakening of this boundary as the environment get more complex. One might argue that the autonomy of some systems is dependent on the environmental complexity and thus the definition of living system is highly context dependent. However, the definition of autonomy can be recovered if material and functional aspects are distinguished. Ironically, the Aristotelian paradigm was abandoned with the advent of modern science, but the recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solve the environmental complexity problem.
+One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and parasitic organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with, generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is defined, or more concretely, the boundary of our so called living system. 
+
+A common argument against some definitions of life is the weakening of this boundary as the environment gets more complex. One might argue that the autonomy of some systems is dependent on the environmental complexity and thus the definition of living system is highly context dependent. However, the definition of autonomy can be recovered if material and functional aspects are distinguished. Ironically, the Aristotelian paradigm that was abandoned with the advent of modern science, can shed some light to this issue. The recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solves the environmental complexity problem. 
+
+A more structural definition of life regarding the properties captured by the functions of the system elements, can be used to demarcate four different kinds of \textit{bioid entities} that would be the object of the study of evolutionary biology. So, as functional closure guarantees autopoiesis and thus replication, we will consider as well 
+evolvavility closure as the second property that might define at the biological level an autonomous living system. It must be clarified,however what we understand by evolvability closure. 
+
+As a mere instance to show the power of category theory organizing ideas, it could be argued that a reasoning analogous to metabolic closure can be placed upon the evolvability of the system. As considered with autopoiesis and, on particular terms, with replication, the evolvability of an autonomous biological system can be thought as closed to its efficient causation. It is important to note here that we are referring to the biological system capacity or potential to evolve no the particular evolutionary trajectory given a set of environmental conditions. 
+
+Evolution requires the production of an offspring with certain error or variability, hence an evolvable system has to comprise both capabilities in order to persist in time.  This variability has to be inherited. Previously it has been shown that we can recover reproduction as a particular case of autopoiesis thus we will just consider variability as the property that has to be closed to efficient causation so as to to consider evolutionary closure. In order to achieve a proper conceptualization, we need to define what we understand by this closure to the inheritance of variants. 
+
+
+Although environmental conditions can perturbate the system in order to produce variants, we will consider just the structural or connatural variance production as if the sole source of variation of a biological system was external factors it would not be closed by definition to the  evolvability. That is, both sources of variability might be operating but ultimately the inherent variability is the source for biological evolution.
+
+Let us take the previously autonomous system considered, the prion which is autonomously replicating....is it autonomously evolving? not unless the prion can produce a variable offspring 
 
 $$ \xymatrix{
 			 Self-replicating & Self-evolving \ar[l]^-{Cell}\\
