--- a/skeleton.tex
+++ b/skeleton.tex
@@ -47,25 +47,22 @@ Hierarchy is a fundamental organizing concept in biology. The existence of a num
 
 \section{Introduction}
 
-The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcends levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. In accordance with this thesis, the aim of this ....
+The current amount of biological data surpasses our present analytic and integrative capacity. The naturalist dream placing high value upon an extensive catalogue of biological diversity has reached molecular resolution and yet we lack a fundamental theoretical framework in which to understand and interpret the relationships living systems exhibit that transcend levels of the biological hierarchy. Moreover, there is no proper language tailored to apprehend, communicate or abstractly settle an ensemble of biological problems that share a common structure. As the current paradigm, apparently organized around data gathering continues, its limitations have become increasingly apparent. If we keep on characterizing our biosphere at the molecular level without a promising theoretical framework, we will soon become lost, if we are not already, in its vastness. What is worse, we could end up in biological Babel with no integrative perspective and thus no means of communication. Hence, from a purely pragmatic perspective, the scientific community should invest in the project of unification of knowledge and make the field of theoretical biology a socio-economically palatable career option for young and old scientists alike. 
 
-Category theory has provided  a solid language in which to talk about mathematical systems and has been recently  used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
+Category theory has provided a solid language in which to talk about mathematical systems and has been recently used as such and such. In the beginning, category theory was considered by other mathematicians commonly as abstract nonsense but nowadays the community is starting to see it even in an applied fashion. Nevertheless, what cannot be criticized of this theoretical framework is its convenience as a formal language in order to deal with a collection of abstract systems such as mathematical theories. The fundamental organizational power of category theory resides in giving relevance to relationships over objects, thus obtaining an abstract framework into which unify different mathematical programs.
 
 \section{The definition of living systems}
 
-One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and parasitic organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with, generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is defined, or more concretely, the boundary of our so called living system. 
+One of the most controversial yet fundamental abstractions that any biological frontier field has to deal with is the selection of the set of properties that characterize uniquely a living system. The majority of the definitions of life focus on the ability to self-sustain, reproduce and evolve autonomously, tying the system to the evolutionary theory. However, not all properties appear simultaneously in all biological systems and \textit{parasitic} organisms can be found for some of the properties described. Furthermore, the lack of other biospheres to compare with, generates a problem regarding the evaluation of our biota historical component. We can classify the properties chosen to define life in two broad groups; evolutionary properties such as reproduction and evolvavility or thermodynamic properties such as autopoiesis and metabolic transformation. The first two are related to the biological level laws while the thermodynamic considerations describe how these higher level properties are sustained by lower level dynamics. The element left intentionally outside of this discussion is the environment in which the living system is defined, or more concretely, the boundary of our so called living system. 
 
-A common argument against some definitions of life is the weakening of this boundary as the environment gets more complex. One might argue that the autonomy of some systems is dependent on the environmental complexity and thus the definition of living system is highly context dependent. However, the definition of autonomy can be recovered if material and functional aspects are distinguished. Ironically, the Aristotelian paradigm that was abandoned with the advent of modern science, can shed some light to this issue. The recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solves the environmental complexity problem. 
+A common argument against some definitions of life is the weakening of this boundary as the environment gets more complex. One might argue that the autonomy of some systems is dependent on the environmental complexity and thus the definition of living system is highly context dependent. However, the definition of autonomy can be recovered if material and functional aspects are distinguished. Ironically, the Aristotelian paradigm that was abandoned with the advent of modern science, can shed some light to this issue. The recovery of the distinction between material and formal cause was crucial for the development of the concept of \href{http://en.wikipedia.org/wiki/Closure_(mathematics)}{closure} applied to efficient causality in autonomous living systems. By differentiating between material and efficient cause, Rosen kept the nature of object and refined the concept of autopoiesis by Maturana and Varela. Invoking this characteristic closure versus a material closure allows us to perfectly solve the environmental complexity problem. 
 
-A more structural definition of life regarding the properties captured by the functions of the system elements, can be used to demarcate four different kinds of \textit{bioid entities} that would be the object of the study of evolutionary biology. So, as functional closure guarantees autopoiesis and thus replication, we will consider as well 
-evolvavility closure as the second property that might define at the biological level an autonomous living system. It must be clarified,however what we understand by evolvability closure. 
+A more structural definition of life regarding the properties captured by the functions of the system elements, can be used to demarcate four different kinds of \textit{bioid entities} that would be the object of the study of evolutionary biology. So, as functional closure guarantees autopoiesis and thus replication, we will consider as well evolvavility closure as the second property that might define, at the biological, level an autonomous living system. It must be clarified, however what we understand by evolvability closure. 
 
 As a mere instance to show the power of category theory organizing ideas, it could be argued that a reasoning analogous to metabolic closure can be placed upon the evolvability of the system. As considered with autopoiesis and, on particular terms, with replication, the evolvability of an autonomous biological system can be thought as closed to its efficient causation. It is important to note here that we are referring to the biological system capacity or potential to evolve no the particular evolutionary trajectory given a set of environmental conditions. 
 
 Evolution requires the production of an offspring with certain error or variability, hence an evolvable system has to comprise both capabilities in order to persist in time.  This variability has to be inherited. Previously it has been shown that we can recover reproduction as a particular case of autopoiesis thus we will just consider variability as the property that has to be closed to efficient causation so as to to consider evolutionary closure. In order to achieve a proper conceptualization, we need to define what we understand by this closure to the inheritance of variants. 
 
-
-Although environmental conditions can perturbate the system in order to produce variants, we will consider just the structural or connatural variance production as if the sole source of variation of a biological system was external factors it would not be closed by definition to the  evolvability. That is, both sources of variability might be operating but ultimately the inherent variability is the source for biological evolution.
 
 Let us take the previously autonomous system considered, the prion which is autonomously replicating....is it autonomously evolving? not unless the prion can produce a variable offspring 
 
@@ -75,11 +72,11 @@ $$ \xymatrix{
 			  
 \section{A scent of category theory}
 
-It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult
+It is not the objective of this work to give a detailed and more formal exposition of category theory but to provide the necessary perspective in order to understand the present text. As a reference in category theory the reader is advised to consult ...
 
 \section{Functional closure}
 
-In this section we will make a clear exposition of the categorical modelling relationship of a functionally closed living system. We will review succinctly Rosen's M,R-systems and hopefully go beyond concreting a categorical model of a living system inspired in our biosphere.
+In this section, we will make a clear exposition of the categorical modelling relationship of a functionally closed living system. We will review succinctly Rosen's M,R-systems and hopefully go beyond concreting a categorical model of a living system inspired in our biosphere.
 
 The first thing we will use in order to build a categorical representation of a living system is its property as a transforming or metabolic entity. Departing from this consideration, a metabolic mapping in a living system $\mathcal{L}$ can be thought as a morphism between two objects of the \textbf{category} $\mathcal{L}$ such that:
 
@@ -90,9 +87,9 @@ The first thing we will use in order to build a categorical representation of a 
 
 \end{center}
 
-As a first approximation, we can think of both objects as sets, where $A$ represents the input metabolites and $B$  products of metabolic transformations. This is a first order abstraction of a living system that could be further developed in the light of considering those sets as graphs. We can define all \textbf{metabolisms} together as the set of all the different morphisms between these objects referred to as $Hom(A,B)$ or $B^A$.
+As a first approximation, we can think of both objects as sets, where $A$ represents the input metabolites and $B$  products of metabolic transformations. This is a zero order abstraction of a living system that could be further developed in the light of considering those sets as graphs. We can define all \textbf{metabolisms} together as the set of all the different morphisms between these objects referred to as $Hom(A,B)$ or $B^A$.
 
-The finite nature of living systems imposes several constrains regarding the reposition or repair of the components that constitute it. So, as metabolic enzymes decay they must be regenerated, from the metabolic products, or the system comprised of them will disintegrate. Besides, environmental fluctuations in $A$ have to be corrected by the differential availability and performance of the metabolic function. Hence, there must be a collection of morphisms from $B$ to $Hom(A,B)$ which can be identified with a \textbf{repair} system. So we have:
+The finite nature of living systems, imposes several constrains regarding the reposition or repair of the components that constitute it. So, as metabolic enzymes decay they must be regenerated, from the metabolic products, or the system comprised of them will disintegrate. Besides, environmental fluctuations in $A$ have to be corrected by the differential availability and performance of the metabolic function. Hence, there must be a collection of morphisms from $B$ to $Hom(A,B)$ which can be identified with a \textbf{repair} system. So we have:
 
 
 \begin{center}
@@ -104,7 +101,7 @@ The finite nature of living systems imposes several constrains regarding the rep
 
 
  The repair system itself or $g \in B^{A^B}$ also has a finite lifetime and needs to be {\it repaired} by some other system. 
-This argument appears to fall into infinite regress (\textbf{Figure 1}), but a detailed analysis shows that a \textbf{replication} function that closes the system to efficient causation is implicit.
+This argument appears to fall into infinite regress (\textbf{Figure 1}), but a detailed analysis shows that a \textbf{replication} function that closes the system to efficient causation is implicit in this categorical representation.
 
 \begin{figure}
 \noindent\includegraphics[width=0.45\columnwidth]{fig/mrcatinf.pdf}
@@ -112,7 +109,7 @@ This argument appears to fall into infinite regress (\textbf{Figure 1}), but a d
 \label{fig:hom}
 \end{figure}
 
-Now let us consider that the category $\mathcal{L}$ is concrete and has products. In order for  $\mathcal{L}$  to be functionally closed every morphism must be represented by or be in turn an object of the category. Hence, the existence of so-called {\it exponential objects} inside the category is associated with special evaluation mappings:
+Now, let us consider that the category $\mathcal{L}$ is concrete and has products. In order for  $\mathcal{L}$  to be functionally closed every morphism must be represented by or be in turn an object of the category. Hence, the existence of so-called {\it exponential objects} inside the category is associated with special evaluation mappings such that:
 
 \begin{align*}
 e_f : B^A \times A &\longrightarrow B\\
@@ -124,13 +121,13 @@ e_f : B^A \times A &\longrightarrow B\\
 	    			            (g,b) & \longmapsto    g(b)
 			\end{align*}		
 
-If we follow the argument of regenerating the repair system we can functionally close the system via the \textbf{replication} map:
+If we follow the argument of regenerating the repair system, we could functionally close the system via the \textbf{replication} map:
 \begin{align*}
 R: B^A & \longrightarrow B^{A^B}\\
 f & \longmapsto R(f)
 \end{align*}	
 
-So, a set of \textbf{boundary conditions} must be satisfied in order to achieve closure.
+So, in order for our system to operate a set of \textbf{boundary conditions} must be satisfied in order to achieve closure:
 			\begin{align*}
 			f(a) &= b : B\\
 			g(b) &= f : B^A\\
@@ -149,7 +146,7 @@ $$
 			A\ar[u]^-{f} & A^B\times B\ar[l]^-{\epsilon}\ar[u]^-{f^B} }
 			$$
 
-As it can be observed, once you reach the second level of exponentiation, the system is already closed, and the higher level exponential objects can be reduced to lower level morphisms. The very same feature can be explained in terms of the $\times \dashv Hom$ adjunction. This is the relationship between the product functor of a category into itself and the exponentiation functor of a category into itself:
+As it can be observed, once you reach the second level of exponentiation, the system is already closed, and the higher level exponential objects can be reduced to lower level morphisms. The very same feature can be explained in terms of the $\times \dashv Hom$ adjunction (see the appendix). This is the relationship between the product functor of a category into itself and the exponentiation functor of a category into itself:
 
 \begin{align*}
 - \times A: \mathcal{C} & \rightleftarrows \mathcal{C}: (-)^A\\
@@ -186,7 +183,7 @@ We can make the adjunction, by $A$, concrete on $B^A$:
 			& B^A \times A \ar[d]^{1_{B^A} \times 1_A} \ar[dl]_{\overline{1_{B^A}}} & B^A \ar@{.>}[d]^{1_{B^A}}\\
 			B & B^A \times A \ar[l]^-{\overline{1_{B^A}}} & B^A}
 			$$
-We will use functor notation to denote the product functor with $\Pi_{Ob}$ and the exponentiation product with $E_{ob}$, thus we can rewrite the bijection
+We can use functor notation to explain the same diagram(\textbf{Which shall we  choose?}) to denote the product functor with $\Pi_{Ob}$ and the exponentiation product with $E_{ob}$, thus we can rewrite the bijection
 		$$
 			\frac{ \Pi_A B^A \longrightarrow B}{B^A \longrightarrow E_A B}
 		$$
@@ -243,23 +240,23 @@ In functor notation:
 			B^A & B^{A^B} \times B \ar[l]^-{\overline{1_{B^{A^B}}}} & B^{A^B}}
 			$$
 Recapitulating, we can get closure at the first level by the following set of bijections:
+				\begin{prooftree}
+				\AxiomC{$B^A \times A \longrightarrow B$}
+				\UnaryInfC{$B^A \longrightarrow B^A$}
+				\UnaryInfC{$1 \longrightarrow B^A \longrightarrow B^A$}							\UnaryInfC{$1 \times A \longrightarrow B \longrightarrow B^A$}
+				\UnaryInfC{$A \longrightarrow B \longrightarrow B^A$}
+				\UnaryInfC{$A \longrightarrow B^A$}
+				\end{prooftree}
+						
+However, if we want to place the biological metaphor in the proper place, we can achive the same at the second level and thus obtain a closed system such as the M.R-System:
 			
-						\begin{prooftree}
+\begin{prooftree}
 				\AxiomC{$B^{A^B} \times B \longrightarrow B^A$}
 				\UnaryInfC{$B^{A^B} \longrightarrow B^{A^B}$}
 				\UnaryInfC{$1 \longrightarrow B^{A^B} \longrightarrow B^{A^B}$}
 				\UnaryInfC{$1 \times B \longrightarrow B^A \longrightarrow B^{A^B}$}
 				\UnaryInfC{$B \longrightarrow B^A \longrightarrow B^{A^B}$}
 				\UnaryInfC{$B \longrightarrow B^{A^B}$}
-				\end{prooftree}
-However, if we want to place the biological metaphor in the proper place, we can achive the same at the second level and thus obtain a closed system such as the M.R-System:
-			
-	\begin{prooftree}
-				\AxiomC{$B^A \times A \longrightarrow B$}
-				\UnaryInfC{$B^A \longrightarrow B^A$}
-				\UnaryInfC{$1 \longrightarrow B^A \longrightarrow B^A$}							\UnaryInfC{$1 \times A \longrightarrow B \longrightarrow B^A$}
-				\UnaryInfC{$A \longrightarrow B \longrightarrow B^A$}
-				\UnaryInfC{$A \longrightarrow B^A$}
 				\end{prooftree}
 
 Closing the system by:
