--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -151,7 +151,7 @@ f & \longmapsto R(f)
 \end{block}
  \begin{columns}
     \begin{column}{0.5\textwidth}
-      \begin{block}{metabolism evaluation map}
+\textbf{\textbf{•\textbf{•}}}      \begin{block}{metabolism evaluation map}
 		\abovedisplayskip=0pt
 		\begin{align*}
 		e_f : B^A \times A &\longrightarrow B\\
